// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Create> should render when [show=false] 1`] = `
<Modal
  label="Create Label"
  onHide={[MockFunction]}
  show={false}
>
  <ModalHeader>
    Create a label
  </ModalHeader>
  <Modal__ModalBody>
    <LabelForm
      color=""
      description=""
      errorColor=""
      errorName=""
      name=""
      onChange={[Function]}
      onColorChange={[Function]}
      onSubmit={[Function]}
    />
  </Modal__ModalBody>
</Modal>
`;

exports[`<Create> should render when [show=true] 1`] = `
<Modal
  label="Create Label"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create a label
  </ModalHeader>
  <Modal__ModalBody>
    <LabelForm
      color=""
      description=""
      errorColor=""
      errorName=""
      name=""
      onChange={[Function]}
      onColorChange={[Function]}
      onSubmit={[Function]}
    />
  </Modal__ModalBody>
</Modal>
`;
